# tbdtranslator

./: .gitignore  CMakeLists.txt  audio_buffer.py  audio_device.py  audio_device_finder.py  audio_processor.py  audio_recorder.py  audio_sink.py  engine.py  languid_controller.py  main.py  main_window.py  sample_format.py  settings_window.py  wav_sink.py
src/: audio_stream_normalizer.cpp  audio_stream_normalizer.h  buffer.cpp  buffer.h  constants.h  file_writer.cpp  file_writer.h  icecast_publisher.cpp  icecast_publisher.h  languid_config.cpp  languid_config.h  languid_controller.cpp  languid_controller.h  main.cpp  speech_recognizer.cpp  speech_recognizer.h  vorbis_encoder.cpp  vorbis_encoder.h  wav_header_remover.cpp  wav_header_remover.h
